--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.6",
     "@nuxt/devtools": "latest",
+    "@nuxtjs/i18n": "next",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
     "nuxt": "^3.8.0",
     "sass": "^1.69.4",
