✨ feat: 集成邮件发送

--- a/cfg/dev.yml
+++ b/cfg/dev.yml
@@ -8,6 +8,13 @@ oauth:
   captcha:
     expired: 1h
 
+email:
+  host: smtp.qq.com
+  port: 587
+  from: Go Next Support <admin@te0.cn>
+  username: admin@te0.cn
+  password: opzasepuoqzebhdf
+
 cache:
   dialect: redis
   host: 127.0.0.1
