🦄 refactor: 重构邮件验证码登录

--- a/cfg/dev.yml
+++ b/cfg/dev.yml
@@ -4,9 +4,8 @@ app:
   debug: true
   workspace: /Users/Chaly/Downloads/YuGone/
 
-oauth:
-  captcha:
-    expired: 1h
+captcha:
+  expired: 10m
 
 email:
   host: smtp.qq.com
