--- a/web/package.json
+++ b/web/package.json
@@ -16,12 +16,12 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
     "nuxt": "^3.8.0",
+    "nuxt-icon": "^0.6.1",
     "sass": "^1.69.4",
     "vue": "^3.3.6",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
     "element-plus": "^2.4.1",
