--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,8 @@
     "@element-plus/nuxt": "^1.0.6",
     "@nuxt/devtools": "latest",
     "@nuxtjs/i18n": "next",
-    "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
+    "@unocss/nuxt": "^0.57.2",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.6.1",
     "sass": "^1.69.4",
