--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
+    "@vueuse/nuxt": "^10.5.0",
+    "defu": "^6.1.3",
     "element-plus": "^2.4.1",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "tailwind-merge": "^2.0.0"
   }
 }
