--- a/web/package.json
+++ b/web/package.json
@@ -21,12 +21,13 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxt/content": "^2.9.0",
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
+    "@unocss/reset": "^0.57.2",
     "@vueuse/nuxt": "^10.5.0",
     "defu": "^6.1.3",
     "element-plus": "^2.4.1",
-    "pinia": "^2.1.7",
-    "tailwind-merge": "^2.0.0"
+    "pinia": "^2.1.7"
   }
 }
