--- a/adm/package.json
+++ b/adm/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify-json/carbon": "^1.1.24",
     "@iconify-json/ep": "^1.1.13",
     "@iconify-json/icon-park-outline": "^1.1.14",
+    "@iconify-json/mdi": "^1.1.58",
     "@iconify-json/ri": "^1.1.14",
     "@vueuse/core": "^10.6.1",
     "element-plus": "^2.4.2",
