--- a/adm/package.json
+++ b/adm/package.json
@@ -18,6 +18,7 @@
     "@iconify-json/mdi": "^1.1.58",
     "@iconify-json/ri": "^1.1.14",
     "@vueuse/core": "^10.6.1",
+    "axios": "^1.6.2",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
