--- a/adm/package.json
+++ b/adm/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "generate": "npx ts-node src/components/IconPicker/generate.ts"
   },
   "dependencies": {
     "@iconify-json/carbon": "^1.1.24",
