--- a/adm/package.json
+++ b/adm/package.json
@@ -46,6 +46,7 @@
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.1",
     "vite-plugin-mock": "^3.0.0",
+    "vite-plugin-top-level-await": "^1.4.1",
     "vue-tsc": "^1.8.25"
   }
 }
