--- a/adm/package.json
+++ b/adm/package.json
@@ -38,6 +38,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
+    "fast-glob": "^3.3.2",
     "mockjs": "^1.1.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
