--- a/adm/package.json
+++ b/adm/package.json
@@ -18,21 +18,22 @@
     "@iconify-json/icon-park-outline": "^1.1.15",
     "@iconify-json/mdi": "^1.1.63",
     "@iconify-json/ri": "^1.1.18",
-    "@vueuse/core": "^10.7.0",
-    "axios": "^1.6.2",
+    "@unocss/reset": "^0.58.3",
+    "@vueuse/core": "^10.7.1",
+    "axios": "^1.6.3",
     "element-plus": "^2.4.4",
     "fuse.js": "^7.0.0",
     "pinia": "^2.1.7",
     "sortablejs": "^1.15.1",
-    "vue": "^3.3.12",
+    "vue": "^3.4.3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.6.1",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.19.3",
+    "@types/node": "^18.19.4",
     "@types/sortablejs": "^1.15.7",
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
@@ -42,8 +43,8 @@
     "mockjs": "^1.1.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.3",
     "typescript": "~5.2.2",
     "unocss": "^0.57.7",
     "unplugin-auto-import": "^0.16.7",
@@ -51,6 +52,6 @@
     "vite": "^4.5.1",
     "vite-plugin-mock": "^3.0.0",
     "vite-plugin-top-level-await": "^1.4.1",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.27"
   }
 }
