--- a/adm/package.json
+++ b/adm/package.json
@@ -27,6 +27,7 @@
     "pinia": "^2.1.7",
     "sortablejs": "^1.15.1",
     "vue": "^3.4.3",
+    "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
