--- a/adm/package.json
+++ b/adm/package.json
@@ -10,7 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "generate": "npx ts-node src/components/IconPicker/generate.ts"
+    "icon-generate": "npx ts-node .scripts/icon.ts"
   },
   "dependencies": {
     "@iconify-json/carbon": "^1.1.27",
