--- a/adm/package.json
+++ b/adm/package.json
@@ -25,6 +25,7 @@
     "fuse.js": "^7.0.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "qrcode.vue": "^3.4.1",
     "sortablejs": "^1.15.1",
     "vue": "^3.4.3",
     "vue-i18n": "^9.8.0",
