✨ feat: 使用七牛云存储配置

--- a/cfg/dev.yml
+++ b/cfg/dev.yml
@@ -35,15 +35,15 @@ database:
   password: postgres
 
 oss:
-  #  vendor: 七牛
-  #  region: z0
-  #  bucket: eunut-tmp
-  #  domain: http://qn.te0.cn
-  #  access_key: rDpoieuu5Jyl-i915MuVyNVT0dFQJPHBFGEG4TlK
-  #  secret_key: 6eVPc6EXTjaLVudIUQEU-QQviiA6r5YPbauVmAVY
-  vendor: 阿里
-  region: oss-cn-beijing.aliyuncs.com
-  bucket: eunut-img
-  domain: http://al.te0.cn
-  access_key: LTAI5tFnu8tZg1kt358Y5diM
-  secret_key: zw1QRLSGq6qGIIM1wuNju5kvN0uBxb
+  vendor: 七牛
+  region: z0
+  bucket: eunut-tmp
+  domain: http://qn.te0.cn
+  access_key: rDpoieuu5Jyl-i915MuVyNVT0dFQJPHBFGEG4TlK
+  secret_key: 6eVPc6EXTjaLVudIUQEU-QQviiA6r5YPbauVmAVY
+#  vendor: 阿里
+#  region: oss-cn-beijing.aliyuncs.com
+#  bucket: eunut-img
+#  domain: http://al.te0.cn
+#  access_key: LTAI5tFnu8tZg1kt358Y5diM
+#  secret_key: zw1QRLSGq6qGIIM1wuNju5kvN0uBxb
