feat: 更新元数据处理逻辑，优化字符串处理函数

--- a/cfg/dev.yml
+++ b/cfg/dev.yml
@@ -7,6 +7,17 @@ app:
 captcha:
   expired: 10m
 
+schema:
+  use-camel: true
+  prefixes:
+    - sys_
+    - cms_
+  block-list:
+    - secret
+    - password
+    - encrypted
+    - token
+    - casbin
 email:
   port: 587
   host: smtp.qq.com
