feat: 更新了captcha模块，优化了配置加载方式，并新增了测试用例

--- a/cfg/dev.yml
+++ b/cfg/dev.yml
@@ -1,8 +1,8 @@
 app:
+  debug: true
   name: "Go Next App"
   port: 8080
-  debug: true
-  workspace: /Users/Chaly/Downloads/YuGone/
+  root: /Users/Chaly/Downloads/YuGone/
 
 captcha:
   expired: 10m
