feat: 更新配置文件和代码结构

--- a/cfg/dev.yml
+++ b/cfg/dev.yml
@@ -5,6 +5,7 @@ app:
   root: /Users/Chaly/Downloads/YuGone/
 
 captcha:
+  length: 6
   expired: 10m
 
 schema:
@@ -27,7 +28,7 @@ email:
   username:
   password:
 
-mobile:
+phone:
   sign_name:
   template_code:
   access_key_id:
